[gd_scene load_steps=10 format=3 uid="uid://j5s6of04as4u"]

[ext_resource type="Texture2D" uid="uid://dsnj8eqvfpere" path="res://images/sprites/scenario/fim de fase/__0005_fio.png" id="1_e6v4r"]
[ext_resource type="Script" path="res://scripts/helicopter.gd" id="1_itdj2"]
[ext_resource type="Texture2D" uid="uid://c2544gkosmcgt" path="res://images/sprites/scenario/fim de fase/__0001_caixinha.png" id="2_658oh"]
[ext_resource type="AudioStream" uid="uid://dw6qd0htvo3yr" path="res://sounds/sfx/joinha.ogg" id="2_beniv"]
[ext_resource type="Texture2D" uid="uid://50v0wwfgvill" path="res://animations/Player/images/frente_sorriso.png" id="4_1qvvh"]
[ext_resource type="PackedScene" uid="uid://dn63h0y4gy7fq" path="res://animations/Player/animation_player.tscn" id="4_b12ui"]
[ext_resource type="Texture2D" uid="uid://11n6a5pdtd5v" path="res://images/sprites/scenario/fim de fase/__0004_m√£o.png" id="5_hu402"]
[ext_resource type="Texture2D" uid="uid://bxr12vibyykwc" path="res://images/sprites/scenario/fim de fase/__0002_joinha.png" id="6_oe3ux"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6tkl"]
size = Vector2(31, 119)

[node name="helicopter" type="Node2D"]
script = ExtResource("1_itdj2")
joinha_effect = ExtResource("2_beniv")

[node name="Strand" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("1_e6v4r")
offset = Vector2(-1, 419)

[node name="PlayerPos" type="Marker2D" parent="Strand"]
position = Vector2(-59, 773)

[node name="PlayerAnimation" parent="Strand/PlayerPos" instance=ExtResource("4_b12ui")]
scale = Vector2(0.883066, 0.883066)

[node name="FrenteIdle" parent="Strand/PlayerPos/PlayerAnimation/Sprites/Down" index="1"]
texture = ExtResource("4_1qvvh")

[node name="Oculos" parent="Strand/PlayerPos/PlayerAnimation/Sprites/Down" index="3"]
position = Vector2(25, -87.0001)

[node name="Hand1" type="Sprite2D" parent="Strand"]
z_index = -1
z_as_relative = false
position = Vector2(4, 716)
texture = ExtResource("5_hu402")

[node name="Hand2" type="Sprite2D" parent="Strand"]
z_index = 3
position = Vector2(-137, 735)
texture = ExtResource("6_oe3ux")

[node name="Box" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("2_658oh")
offset = Vector2(-0.25, 84)

[node name="Trigger" type="Area2D" parent="."]
position = Vector2(0, 776)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2(-5.5, -40.5)
shape = SubResource("RectangleShape2D_m6tkl")

[editable path="Strand/PlayerPos/PlayerAnimation"]
